<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anp_ar_component_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_anp_ar_layout"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/anp_ar_component_padding">

    <RelativeLayout
        android:id="@+id/anp_actions_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:minHeight="@dimen/anp_ar_min_height">

        <ImageView
            android:id="@+id/record_button"
            android:layout_width="@dimen/anp_ar_icons_width"
            android:layout_height="@dimen/anp_ar_icons_height"
            android:contentDescription="@string/anp_ar_record_audio"
            android:src="@drawable/ic_anp_ar_mic"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="@dimen/anp_ar_icons_width"
            android:layout_height="@dimen/anp_ar_icons_height"
            android:contentDescription="@string/anp_ar_play_recorded_sound"
            android:src="@drawable/ic_anp_ar_play"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/pause_button"
            android:layout_width="@dimen/anp_ar_icons_width"
            android:layout_height="@dimen/anp_ar_icons_height"
            android:contentDescription="@string/anp_ar_pause_audio_being_played"
            android:src="@drawable/ic_anp_ar_pause"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/stop_button"
            android:layout_width="@dimen/anp_ar_icons_width"
            android:layout_height="@dimen/anp_ar_icons_height"
            android:contentDescription="@string/anp_ar_stop_audio_being_played"
            android:src="@drawable/ic_anp_ar_stop"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/anp_layout_seek_and_audio_freq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/anp_time_layout"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/anp_actions_layout"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="0dp"
        android:paddingEnd="4dp">

        <pereira.agnaldo.audiorecorder.HorizontalWaveView
            android:id="@+id/horizontal_wave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

        <SeekBar
            android:id="@+id/play_pause_seek"
            style="@style/AnpSeekBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:progress="50"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/anp_time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/anp_layout_seek_and_audio_freq"
        android:layout_alignEnd="@+id/anp_layout_seek_and_audio_freq"
        android:layout_alignBottom="@+id/anp_actions_layout"
        android:layout_gravity="end|bottom"
        android:gravity="end|bottom"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/timer_view_current"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="start|bottom"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/anp_ar_zero_time"
            android:textColor="@color/anp_ar_time_text_color"
            android:textSize="@dimen/anp_ar_time_text_size"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/timer_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:gravity="end"
            android:text="@string/anp_ar_zero_time"
            android:textColor="@color/anp_ar_time_text_color"
            android:textSize="@dimen/anp_ar_time_text_size"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/anp_ar_delete_audio_recorded"
            android:foregroundGravity="bottom"
            android:src="@drawable/ic_anp_ar_delete"
            android:visibility="visible" />

    </LinearLayout>

</RelativeLayout>
